Changelog
=========

1.9 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * `get_context` methods on StreamField blocks can now access variables from the parent context (Mikael Svensson, Peter Baumgartner)
 * View live / draft links in the admin now consistently open in a new window (Marco Fucci)
 * `ChoiceBlock` now omits the blank option if the block is required and has a default value (Andreas Nüßlein)
 * Fix: Help text for StreamField is now visible and does not cover block controls (Stein Strindhaug)
 * Fix: "X minutes ago" timestamps are now marked for translation (Janneke Janssen, Matt Westcott)


1.8 (15.12.2016)
~~~~~~~~~~~~~~~~

 * New page privacy options (Shawn Makinson, Tom Miller, Luca Perico, Matt Westcott)
 * New 'bulk delete' permission type for deleting pages with children (Matt Westcott)
 * Elasticsearch 5 support (Karl Hobley)
 * Added support of a custom `edit_handler` in site settings (Axel Haustant)
 * Added `get_landing_page_template` getter method to `AbstractForm` (Gagaro)
 * Added `Page.get_admin_display_title` method to override how the title is displayed in the admin (Henk-Jan van Hasselaar)
 * Added support for specifying custom HTML attributes for table rows on ModelAdmin index pages (Andy Babic)
 * Added `first_common_ancestor` method to `PageQuerySet` (Tim Heap)
 * Page chooser now opens at the deepest ancestor page that covers all the pages of the required page type (Tim Heap)
 * `PageChooserBlock` now accepts a `target_model` option to specify the required page type (Tim Heap)
 * Modeladmin forms now respect `fields` / `exclude` options passed on custom model forms (Thejaswi Puthraya)
 * Added new StreamField block type `StaticBlock` (Benoît Vogel)
 * Added new StreamField block type `BlockQuoteBlock` (Scot Hacker)
 * Updated Cloudflare cache module to use the v4 API (Albert O'Connor)